Changelog
=========

Version 1.11 - unreleased
-------------------------

* Added note to profiles.zcml of plone2.5_theme that
  five.registerPackage needs Five version 1.4.
  [maurits]

* Added a BUILDBOT.txt file.
  [tarek]

* plone3_portlet: added commented out alternative AddForm for when
  there are no configurable parameters.  That was shorter than listing
  all the changes (where we forgot one).
  [maurits]

* Fixed typos in archetyps and plone3 portlets: 'portletBotomLeft'
  should have been 'portletBottomLeft' with two 't's.
  [maurits]

* Made plone3_portlet respect pep8 (and pyflakes).
  [maurits]

* Use 1.0 as default version number for all templates. This is a more sensible
  default than 0.1 since we start of with dev-versions anyway.
  [wichert]

* sub-templates per ZopeSkel template: Only sub-templates related to the parent
  template is visible with the -l option
  [mustapha]

* added -a (--list-all) option to show all subtemplates regardless of the
  current project. Subtemplates that are not for the type of the current
  project are prefixed with N
  [mustapha]

* Fixed the recreation of the paster_plugins.txt metadata file for archetype.
  For now we have to run 2 times the egg_info command to get the paster_plugins
  file recreated (setuptools problem: nice task to fix) 
  [mustapha]

* fixed the case of many inner packages: ask the user to choose a packe to
  inject content into if the command is run outside of an inner package
  [mustapha]

* make all ZopeSkel templates that inherits from BaseTemplate addcontent aware
  [mustapha]

* Added plone_pas template for PlonePas projects and many subtemplates
  [mustapha]

* regrouped archetype subtemplates in templates/archetype
  [mustapha]

* added and fixed tests
  [mustapha]


Version 1.10
------------

* Install Plone 3.1.1 as default option.
  [wichert]
  
* Fixed a problem with ZopeSkel localcommands when we have multiple 
  projects, it was getting the first directory always and sometimes